--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "font-awesome": "^4.7.0",
     "install": "^0.12.2",
     "mint-ui": "^2.2.13",
+    "moment": "^2.24.0",
     "vue": "^2.6.10",
     "vue-resource": "^1.5.1",
     "vue-router": "^3.0.6"
