新增商品列表

--- a/.babelrc
+++ b/.babelrc
@@ -10,6 +10,7 @@
         "libraryName": "mint-ui",
         "style": true
       }
-    ]
+    ],
+    ["@babel/plugin-transform-modules-commonjs", { "strictMode": false }]
   ]
 }
