--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "webpack-dev-server --open --port 3000 --hot"
+    "dev": "webpack-dev-server --open --port 3000 --hot --host 192.168.1.101"
   },
   "keywords": [],
   "author": "",
@@ -13,14 +13,18 @@
   "devDependencies": {
     "@babel/core": "^7.4.5",
     "@babel/plugin-proposal-class-properties": "^7.4.4",
+    "@babel/plugin-transform-modules-commonjs": "^7.4.4",
     "@babel/plugin-transform-runtime": "^7.4.4",
+    "@babel/plugin-transform-strict-mode": "^7.2.0",
     "@babel/preset-env": "^7.4.5",
     "@babel/runtime": "^7.4.5",
     "babel-loader": "^8.0.0-beta.0",
     "babel-plugin-component": "^1.1.1",
     "css-loader": "^3.0.0",
+    "express": "^4.17.1",
     "file-loader": "^4.0.0",
     "html-webpack-plugin": "^3.2.0",
+    "install": "^0.12.2",
     "less": "^3.9.0",
     "less-loader": "^5.0.0",
     "node-sass": "^4.12.0",
@@ -35,12 +39,12 @@
   },
   "dependencies": {
     "bootstrap": "^4.3.1",
-    "express": "^4.17.1",
     "font-awesome": "^4.7.0",
-    "install": "^0.12.2",
     "mint-ui": "^2.2.13",
     "moment": "^2.24.0",
     "vue": "^2.6.10",
+    "vue-photo-preview": "^1.1.3",
+    "vue-preview": "^1.1.3",
     "vue-resource": "^1.5.1",
     "vue-router": "^3.0.6"
   }
