--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "vue-photo-preview": "^1.1.3",
     "vue-preview": "^1.1.3",
     "vue-resource": "^1.5.1",
-    "vue-router": "^3.0.6"
+    "vue-router": "^3.0.6",
+    "vuex": "^3.1.1"
   }
 }
